# mt_cmake_app

./: CMakeApp.cpp  CMakeApp.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
cmake_toolchains/: msvc.cmake
